tests/ui/struct_parse.stderr
error: proc-macro derive panicked
  --> $DIR/struct_parse.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: parse attribute is only allowed on fields
